RESOLVED FIXED220578
[WPE] focus-visible-003.html and focus-visible-004.html are timing out in input tags
https://bugs.webkit.org/show_bug.cgi?id=220578
Summary [WPE] focus-visible-003.html and focus-visible-004.html are timing out in inp...
Lauro Moura
Reported 2021-01-12 22:41:19 PST
imported/w3c/web-platform-tests/css/selectors/focus-visible-003.html imported/w3c/web-platform-tests/css/selectors/focus-visible-004.html Both are getting stuck when reaching the `<button ...>` tag test, with the focus event not being triggered and making the Promise to get stuck, not following into the assertions. Running with WPE's MiniBrowser, all input controls except color (not yet supported in WPE) does not show either the Red or Green outlines with the results of the test.
Attachments
Patch (3.29 KB, patch)
2021-01-20 09:10 PST, Manuel Rego Casasnovas
no flags
Lauro Moura
Comment 1 2021-01-12 22:46:29 PST
Updated expectations to Failure in r271431
Manuel Rego Casasnovas
Comment 2 2021-01-20 09:10:26 PST
Lauro Moura
Comment 3 2021-01-20 13:19:14 PST
Comment on attachment 417974 [details] Patch Testing locally, the patch indeed fixes the tests and seems to introduce no new regressions. Putting up r? flag.
Javier Fernandez
Comment 4 2021-01-20 13:30:25 PST
Comment on attachment 417974 [details] Patch r=me
Lauro Moura
Comment 5 2021-01-20 13:31:18 PST
Comment on attachment 417974 [details] Patch Thanks!
EWS
Comment 6 2021-01-20 13:41:56 PST
Committed r271671: <https://trac.webkit.org/changeset/271671> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417974 [details].
Radar WebKit Bug Importer
Comment 7 2021-01-20 13:42:14 PST
Note You need to log in before you can comment on or make changes to this bug.